@@ -3,6 +3,8 @@
 - Adding basic report functionality
 - Modifying logging and runs scipts to help with debugging when running on AWS via Tibanna
 - Added rules for indexing dipcall output bams
+- Initial optimization of dipcall and happy resource compute requirements
+- Revised and restructured resources.yml and schema for clearer documentation and easier use.
 - Added analyses.tsv and updated resource config files for running framework on 44 HPRC genome and HG002 XY
 
 # Milestone v0.003 2022-01-28
